scroll to citation

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
   <div id="render" class="container"></div>
   <div class="readText">
     <div id="handle" class="ui-resizable-handle ui-resizable-n"></div>
-    <div class='content'></div>
+    <div class='content'>
+      
+
+    </div>
   </div>
 
 
